--- a/home_fix/map/templates/map/locs_hardware.html
+++ b/home_fix/map/templates/map/locs_hardware.html
@@ -26,7 +26,7 @@
 
     };
   function initMap() {
-    //const sydney = new google.maps.LatLng(-33.867, 151.195);
+    //const sydney = new google.map.LatLng(-33.867, 151.195);
     var directionsService = new google.maps.DirectionsService();
   var directionsRenderer = new google.maps.DirectionsRenderer();
     infowindow = new google.maps.InfoWindow();
