--- a/home_fix/users/templates/users/layout.html
+++ b/home_fix/users/templates/users/layout.html
@@ -35,12 +35,12 @@
 <header class="p-3 bg-dark text-white shadow p-3 mb-4">
     <div class="container">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-            <a class="navbar-brand" href="{% url 'users:index' %}" style="color: white;">
+            <a class="navbar-brand" href="{% url 'basic:index' %}" style="color: white;">
                 <strong><i class="fa-solid fa-screwdriver-wrench"></i> Homefix</strong>
             </a>
 
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="{% url 'users:search_hardware' %}" class="nav-link px-2 text-white">Maps</a></li>
+                <li><a href="{% url 'map:search_hardware' %}" class="nav-link px-2 text-white">Maps</a></li>
                 <li><a href="{% url 'users:pricing' %}" class="nav-link px-2 text-white">Pricing</a></li>
                 <li><a href="#" class="nav-link px-2 text-white">Forums</a></li>
                 <li><a href="#" class="nav-link px-2 text-white">About</a></li>
