--- a/home_fix/basic/templates/basic/homepage.html
+++ b/home_fix/basic/templates/basic/homepage.html
@@ -1,7 +1,7 @@
 {% extends "users/layout.html" %}
 {% load static %}
 {% block head %}
-    <link rel="stylesheet" href="{% static 'users/features.css' %}"/>
+    <link rel="stylesheet" href="{% static 'basic/features.css' %}"/>
 {% endblock %}
 {% block title %}Home | Homefix{% endblock %}
 {% block body %}
