--- a/home_fix/users/templates/users/profile_editor.html
+++ b/home_fix/users/templates/users/profile_editor.html
@@ -1,7 +1,7 @@
 {% extends "users/layout.html" %}
 {% load static %}
 {% block head %}
-<link rel="stylesheet" href="{% static 'users/features.css' %}"/>
+<link rel="stylesheet" href="{% static 'basic/features.css' %}"/>
 {% endblock %}
 {% block title %}Editor | Homefix{% endblock %}
 {% block body %}
@@ -146,7 +146,7 @@
                 <div class="form-group">
                     <label class="col-md-3 control-label"></label>
                     <div class="col-md-8">
-                         <button class="btn btn-primary" type="submit">submit</button>
+                        <button class="btn btn-primary" type="submit">submit</button>
                         <span></span>
                         <input type="reset" class="btn btn-default" value="Cancel">
                     </div>
