--- a/home_fix/users/templates/users/profile.html
+++ b/home_fix/users/templates/users/profile.html
@@ -49,21 +49,21 @@
         <div style="margin: 0 auto; width: 500px">
             <div class="form-outline mb-4">
                 <p>membership</p>
-                {% if user.tier == 0 %}
+                {% if user.tier == 1 %}
                     <p>
-                        Regular
+                        Starter
                     </p>
                 {% endif %}
 
-                {% if user.tier == 1 %}
+                {% if user.tier == 2 %}
                     <div>
-                        Primer
+                        Golden Hammer
                     </div>
                 {% endif %}
 
-                {% if user.tier == 2 %}
-                    <div class="btn-outline-danger">
-                        Unlimited
+                {% if user.tier == 3 %}
+                    <div>
+                        Loyal Customer
                     </div>
                 {% endif %}
             </div>
