user_center logic

--- a/home_fix/service/templates/service/offer_services.html
+++ b/home_fix/service/templates/service/offer_services.html
@@ -118,6 +118,7 @@
             var state = document.getElementById('state').value;
             var postalcode = document.getElementById('postalcode').value;
             var country = document.getElementById('country').value;
+            // can fetch lat and long from google
             var lat = 12.12;
             var long = 21.14;
             $.ajax({
