--- a/home_fix/users/templates/users/layout.html
+++ b/home_fix/users/templates/users/layout.html
@@ -61,7 +61,7 @@
                     </a>
                     <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
                         <li><a class="dropdown-item" href="#">Settings</a></li>
-                        <li><a class="dropdown-item" href="{% url 'users:profile' %}">Profile</a></li>
+                        <li><a class="dropdown-item" href="{% url 'user_center:profile' %}">Profile</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
