revise test cases

--- a/home_fix/basic/templates/basic/homepage.html
+++ b/home_fix/basic/templates/basic/homepage.html
@@ -1,4 +1,4 @@
-{% extends "users/layout.html" %}
+{% extends "basic/layout.html" %}
 {% load static %}
 {% block head %}
     <link rel="stylesheet" href="{% static 'basic/features.css' %}"/>
