--- a/home_fix/map/templates/map/locs.html
+++ b/home_fix/map/templates/map/locs.html
@@ -1,4 +1,4 @@
-{% extends "users/layout.html" %}
+{% extends "basic/layout.html" %}
 {% block title %}Location | Homefix{% endblock %}
 {% block body %}
 <style>
