--- a/home_fix/user_center/templates/user_center/profile.html
+++ b/home_fix/user_center/templates/user_center/profile.html
@@ -73,7 +73,7 @@
                     <p>{{ user.street }}</p>
                 </div>
             </div>
-            <a class="btn btn-light btn-lg btn-block shadow" href="{% url 'users:profile_editor' %}" role="button">
+            <a class="btn btn-light btn-lg btn-block shadow" href="{% url 'user_center:profile_editor' %}" role="button">
                 Edit your information
             </a>
         </div>
