--- a/home_fix/users/templates/users/login.html
+++ b/home_fix/users/templates/users/login.html
@@ -1,4 +1,4 @@
-{% extends "users/layout.html" %}
+{% extends "basic/layout.html" %}
 {% load static %}
 {% load socialaccount %}
 {% block title %}Login | Homefix{% endblock %}
