--- a/home_fix/users/templates/users/pricing.html
+++ b/home_fix/users/templates/users/pricing.html
@@ -1,4 +1,4 @@
-{% extends "users/layout.html" %}
+{% extends "basic/layout.html" %}
 {% block head %}
     <style>
         .bd-placeholder-img {
@@ -148,7 +148,6 @@
                                 <use xlink:href="#check"/>
                             </svg>
                         </td>
-                        Ï
                         <td>
                             <svg class="bi" width="24" height="24">
                                 <use xlink:href="#check"/>
