--- a/home_fix/users/templates/users/set_location.html
+++ b/home_fix/users/templates/users/set_location.html
@@ -1,4 +1,4 @@
-{% extends "users/layout.html" %}
+{% extends "basic/layout.html" %}
 {% block title %}Set Location | Homefix{% endblock %}
 {% block body %}
     <!-- Push Notification -->
