--- a/home_fix/map/templates/map/locs_hardware.html
+++ b/home_fix/map/templates/map/locs_hardware.html
@@ -1,4 +1,4 @@
-{% extends "users/layout.html" %}
+{% extends "basic/layout.html" %}
 {% block title %}Hardware Stores | Homefix{% endblock %}
 {% block body %}
 <style>
