--- a/home_fix/user_center/templates/user_center/profile.html
+++ b/home_fix/user_center/templates/user_center/profile.html
@@ -1,4 +1,4 @@
-{% extends "users/layout.html" %}
+{% extends "basic/layout.html" %}
 {% block title %}Profile | Homefix{% endblock %}
 {% block body %}
     <section class="container">
