--- a/home_fix/users/templates/users/success.html
+++ b/home_fix/users/templates/users/success.html
@@ -1,8 +1,8 @@
-{% extends "users/layout.html" %}
+{% extends "basic/layout.html" %}
 
 {% block title %}
-    Payment Success | Homefix
+Payment Success | Homefix
 {% endblock %}
 {% block body %}
-    <h1>Payment Successful! Return to homepage</h1>
+<h1>Payment Successful! Return to homepage</h1>
 {% endblock %}
