--- a/home_fix/user_center/templates/user_center/contact.html
+++ b/home_fix/user_center/templates/user_center/contact.html
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends "basic/layout.html" %}
+{% block title %}transaction | Homefix{% endblock %}
+{% block body %}
+{% endblock %}
