--- a/home_fix/user_center/templates/user_center/my_request_page.html
+++ b/home_fix/user_center/templates/user_center/my_request_page.html
@@ -1,10 +1,32 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "basic/layout.html" %}
+{% block title %} My Request | Homefix{% endblock %}
+{% block body %}
+{% for order in order_list%}
+<table class="table">
+    <thead>
+    <tr>
+        <th scope="col">Order_id</th>
+        <th scope="col">Service_id</th>
+        <th scope="col">Provider</th>
+        <th scope="col">date</th>
+        <th scope="col">status</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <th scope="row">{{ order.id }}</th>
+        <td>{{ order.service.id }}</td>
+        <td>{{ order.service.user }}</td>
+        <td>{{ order.timestamp }}</td>
+        <td>{{ order.status }}</td>
+        <td>
+            {% if order.status != 'finished'%}
+            <div><a href="{% url 'user_center:request_finish' order.id %}">finish</a></div>
+            {%endif%}
+        </td>
+    </tr>
+    </tbody>
+</table>
 
-</body>
-</html>
+{% endfor %}
+{% endblock %}
