--- a/home_fix/user_center/templates/user_center/transaction.html
+++ b/home_fix/user_center/templates/user_center/transaction.html
@@ -1,10 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends "basic/layout.html" %}
+{% block title %}Transaction | Homefix{% endblock %}
+{% block body %}
+{% for record in transactions%}
+<table class="table">
+    <thead>
+    <tr>
+        <th scope="col">date</th>
+        <th scope="col">sender</th>
+        <th scope="col">receiver</th>
+        <th scope="col">amount</th>
+        <th scope="col">commission_fee</th>
+        <th scope="col">type</th>
+        <th></th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <th scope="row">{{ record.timestamp }}</th>
+        <td>{{ record.sender }}</td>
+        <td>{{ record.receiver }}</td>
+        <td>{{ record.amount }}</td>
+        <td>{{ record.commission_fee }}</td>
+        <td>{{ record.service_type }}</td>
+    </tr>
+    </tbody>
+</table>
+{% endfor %}
+{% endblock %}
