change price type

--- a/home_fix/users/templates/users/pricing.html
+++ b/home_fix/users/templates/users/pricing.html
@@ -72,7 +72,7 @@
                             <h4 class="my-0 fw-normal">{{ product2.name }}</h4>
                         </div>
                         <div class="card-body">
-                            <h1 class="card-title pricing-card-title">${{ product2.get_display_price }}<small
+                            <h1 class="card-title pricing-card-title">${{ product2.price }}<small
                                     class="text-muted fw-light">/yr</small>
                             </h1>
                             <ul class="list-unstyled mt-3 mb-4">
@@ -94,7 +94,7 @@
                             <h4 class="my-0 fw-normal">{{ product3.name }}</h4>
                         </div>
                         <div class="card-body">
-                            <h1 class="card-title pricing-card-title">${{ product3.get_display_price }}<small
+                            <h1 class="card-title pricing-card-title">${{ product3.price }}<small
                                     class="text-muted fw-light">/yr</small>
                             </h1>
                             <ul class="list-unstyled mt-3 mb-4">
