--- a/home_fix/service/templates/service/request_services.html
+++ b/home_fix/service/templates/service/request_services.html
@@ -94,31 +94,29 @@
 
 <!-- HARD CODED THE POSTS THAT HAVE TO BE CREATED DYNAMICALLY LATER USING JS/PY-->
 {% for service in services%}
-<a class="service" style="text-decoration: None; color: black; padding:1%" name="{{ service.service_category }}">
-    <div class="card shadow border-0 col-md-8 offset-md-2" onclick="alert('YET TO BUILD')" style="width: 65%">
-        <div class="card-body p-4">
-            <div class="badge bg-success bg-gradient rounded-pill mb-2 offset-md-1">{{ service.service_category }}</div>
-            <div class="h5 card-title mb-3 col-md-8 offset-md-2">{{ service.service_category }}</div>
-            <div class="card-text mb-0 col-md-8 offset-md-2">
-                {{ service.service_description| safe }}
-            </div>
-        </div>
-        <div class="card-footer p-4 pt-0 bg-transparent border-top-0 col-md-4 offset-md-1">
-            <div class="d-flex align-items-end justify-content-between">
-                <div class="d-flex align-items-center">
-                    <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d"
-                         alt="..."/>
-                    <div class="small">
-                        <div class="fw-bold">{{ service.user.email }}</div>
-                        <div class="text-muted"> COINS CHARGED: {{ service.coins_charged }}</div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div>
-            <a href="{% url 'service:request_service_confirm' service.id%}">select</a>
-        </div>
-    </div>
+<a class="service" style="text-decoration: None; color: black; padding:1%" name="{{ service.service_category }}" 
+href="{% url 'service:service_detail' service.id %}">
+  <div class="card shadow border-0 col-md-8 offset-md-2" style="width: 65%">
+      <div class="card-body p-4">
+          <div class="badge bg-success bg-gradient rounded-pill mb-2 offset-md-1">{{ service.service_category }}</div>
+              <div class="h5 card-title mb-3 col-md-8 offset-md-2">{{ service.service_category }}</div>
+          <div class="card-text mb-0 col-md-8 offset-md-2">
+              {{ service.service_description| safe }}
+          </div>
+      </div>
+      <div class="card-footer p-4 pt-0 bg-transparent border-top-0 col-md-4 offset-md-1">
+          <div class="d-flex align-items-end justify-content-between">
+              <div class="d-flex align-items-center">
+                  <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d"
+                       alt="..."/>
+                  <div class="small">
+                      <div class="fw-bold">{{ service.user.first_name }}</div>
+                      <div class="text-muted"> COINS CHARGED: {{ service.coins_charged }}</div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
 </a>
 {% endfor %}
 
