Updated My Provide Page

--- a/home_fix/basic/templates/basic/homepage.html
+++ b/home_fix/basic/templates/basic/homepage.html
@@ -80,10 +80,7 @@
             <h1 class="display-5 fw-bold">A better way to fix home</h1>
         {% endif %}
         <div class="col-lg-6 mx-auto">
-            <p class="lead mb-4">Bacon ipsum dolor amet kevin flank tail andouille venison shank, ham shoulder sirloin.
-                Strip steak ground round filet mignon short ribs capicola, t-bone boudin jerky meatloaf burgdoggen
-                buffalo. Chislic chicken short loin tongue, buffalo landjaeger leberkas. Burgdoggen sausage cupim
-                meatball pastrami beef.</p>
+            <p class="lead mb-4">Our Mission is to help every person to have that friend who helps to fix house hold issues and provide similar help. We believe that this platform users can not only take the help but also provide the help for their friends charging the coins of their wish. So why to wait? Subscribe for our Golden Hammer tier soon and enjoy this platform by getting help from your nearest friend to fix your household issue! We assure you that you will enjoy our services!</p>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
                 <button type="button" class="btn btn-primary btn-lg px-4 gap-3" onclick="location.href='{% url 'service:offer_service' %}'">Offer
                     Services
