--- a/home_fix/user_center/templates/user_center/my_provide_page.html
+++ b/home_fix/user_center/templates/user_center/my_provide_page.html
@@ -1,30 +1,91 @@
 {% extends "basic/layout.html" %}
-{% block title %}My Provide | Homefix{% endblock %}
+{% block title %} My Provide | Homefix{% endblock %}
 {% block body %}
+<style>
+    .dropbtn {
+      background-color: #04AA6D;
+      color: white;
+      border: none;
+    }
+    
+    .dropdown {
+      position: relative;
+      display: inline-block;
+    }
+    
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      background-color: #f1f1f1;
+      min-width: 160px;
+      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+      z-index: 1;
+    }
+    
+    .dropdown-content a {
+      color: black;
+      padding: 12px 16px;
+      text-decoration: none;
+      display: block;
+    }
+    
+    .dropdown-content a:hover {background-color: #ddd;}
+    
+    .dropdown:hover .dropdown-content {display: block;}
+    
+    .dropdown:hover .dropbtn {background-color: #3e8e41;}
+    </style>
+<br><br>
+<center>
+<h1 class="display-5 fw-bold">SERVICES YOU PROVIDE</h1>
+</center>
+<br><br>
+
 {% for provide in provide_list%}
-<table class="table">
-    <thead>
-    <tr>
-        <th scope="col">Service_id</th>
-        <th scope="col">create_time</th>
-        <th scope="col">request_time</th>
-        <th scope="col">requester</th>
-        <th scope="col">status</th>
-        <th></th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <th scope="row">{{ provide.service_id }}</th>
-        <td>{{ provide.service_time }}</td>
-        <td>{{ provide.order_time }}</td>
-        <td>{{ provide.request_user_id }}</td>
-        <td>{{ provide.status }}</td>
-        <td>
-            <button>sdfsdf</button>
-        </td>
-    </tr>
-    </tbody>
-</table>
+<style>
+    a { 
+        text-decoration: none; 
+        color: black;
+      }
+  </style>
+
+<div class="container w-75 border border-success rounded-pill" style="background-color: #eee;">
+    <div class="row">
+        <div class="col-10 text-center">
+            <table class="table">
+                <thead>
+                <tr>
+                    <th scope="col">Service_id</th>
+                    <th scope="col">Create Time</th>
+                    <th scope="col">Request Time</th>
+                    <th scope="col">Requester</th>
+                    <th scope="col">Status</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <th scope="row">{{ provide.service_id }}</th>
+                    <td>{{ provide.service_time }}</td>
+                    <td>{{ provide.order_time }}</td>
+                    <td>{{ provide.request_user_id }}</td>
+                    <td>{{ provide.status }}</td>
+                    <td>
+                        <div class="dropdown">
+                            <button class="dropbtn">Action</button>
+                            <div class="dropdown-content">
+                              <a href="#">Accept</a>
+                              <a href="#">Cancel</a>
+                              <a href="#">Delete</a>
+                              <a href="#">Update</a>
+                            </div>
+                          </div>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
+<br><br>
 {% endfor %}
 {% endblock %}
