--- a/home_fix/service/templates/service/services_locations.html
+++ b/home_fix/service/templates/service/services_locations.html
@@ -30,10 +30,11 @@
     var directionsService = new google.maps.DirectionsService();
   var directionsRenderer = new google.maps.DirectionsRenderer();
     infowindow = new google.maps.InfoWindow();
-    var userlocations = eval("{{users|safe}}")
+    var services = eval("{{services|safe}}")
     var locations = eval("{{user|safe}}");
     var uluru = { lat: locations[0], lng: locations[1] };
     
+    console.log(services);
     console.log(locations);
     
     map = new google.maps.Map(document.getElementById("map"), {
@@ -47,9 +48,9 @@
       icon: icons["users"].icon,
       map: map,
     });
-    for (var i = 0; i < userlocations.length; i++) {
-      console.log(userlocations[i])
-      uluruusers = { lat: userlocations[i][0], lng: userlocations[i][1] };
+    for (var i = 0; i < services.length; i++) {
+      console.log(services[i])
+      uluruusers = { lat: services[i][0], lng: services[i][1] };
       var markerus = new google.maps.Marker({
         position: uluruusers,
         icon: icons["users"].icon,
@@ -58,9 +59,6 @@
     }
     
 
-
-
-
         
 
   }
@@ -68,7 +66,7 @@
 
 
 </script>
-<h3>Near by Hardware Stores</h3>
+<h3>Locations of services</h3>
 <div id="map"></div>
 <script
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC5T-eiKa6XvYLkvOV00GYiCKTcFyeUOnE&callback=initMap&libraries=places&v=weekly"
