--- a/home_fix/user_center/templates/user_center/my_provide_page.html
+++ b/home_fix/user_center/templates/user_center/my_provide_page.html
@@ -69,7 +69,7 @@
                     <td>{{ provide.order_time }}</td>
                     <td>{{ provide.request_user_id }}</td>
                     <td>{{ provide.status }}</td>
-                    <td>
+                    <!-- <td>
                         <div class="dropdown">
                             <button class="dropbtn">Action</button>
                             <div class="dropdown-content">
@@ -79,10 +79,21 @@
                               <a href="#">Update</a>
                             </div>
                           </div>
-                    </td>
+                    </td> -->
                 </tr>
                 </tbody>
             </table>
+        </div>
+        <div class="col justify-content-center align-self-center text-center">
+            <div class="dropdown">
+                <button class="dropbtn btn btn-success">Action</button>
+                    <div class="dropdown-content">
+                        <a href="#">Accept</a>
+                        <a href="#">Cancel</a>
+                        <a href="#">Delete</a>
+                        <a href="#">Update</a>
+                    </div>
+              </div>
         </div>
     </div>
 </div>
