--- a/home_fix/user_center/templates/user_center/profile.html
+++ b/home_fix/user_center/templates/user_center/profile.html
@@ -6,26 +6,22 @@
         <hr>
         <div style="margin: 0 auto; width: 500px">
             <div class="form-outline mb-4">
-                <p>first name</p>
-                <p>{{ user.first_name }}</p>
+                <p>first name: {{ user.first_name }}</p>
             </div>
         </div>
         <div style="margin: 0 auto; width: 500px">
             <div class="form-outline mb-4">
-                <p>last name</p>
-                <p>{{ user.last_name }}</p>
+                <p>last name: {{ user.last_name }}</p>
             </div>
         </div>
         <div style="margin: 0 auto; width: 500px">
             <div class="form-outline mb-4">
-                <p>Coins</p>
-                <p>{{ user.coin }}</p>
+                <p>Coins: {{ user.coin }}</p>
             </div>
         </div>
         <div style="margin: 0 auto; width: 500px">
             <div class="form-outline mb-4">
-                <p>email</p>
-                <p>{{ user.email }}</p>
+                <p>email: {{ user.email }}</p>
             </div>
         </div>
         <div style="margin: 0 auto; width: 500px">
@@ -42,8 +38,7 @@
         </div>
         <div style="margin: 0 auto; width: 500px">
             <div class="form-outline mb-4">
-                <p>street</p>
-                <p>{{ user.street }}</p>
+                <p>street: {{ user.street }}</p>
             </div>
         </div>
         <div style="margin: 0 auto; width: 500px">
